--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
             <version>5.3.11.Final</version>
             <type>pom</type>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
